<package format="3">
  <name>ros1_ros2_pkg</name>
  <version>0.0.0</version>
  <description>test package for ROS1 and ROS2</description>

  <license>BSD</license>
  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</maintainer>
  <author email="sugiahara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</author>

  <depend>pluginlib</depend>

  <buildtool_depend condition="$ROS_VERSION==1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION==2">ament_cmake</buildtool_depend>

  <build_depend condition="$ROS_VERSION==1">roscpp</build_depend>
  <build_depend condition="$ROS_VERSION==2">rclcpp</build_depend>

  <build_depend>std_msgs</build_depend>

  <exec_depend condition="$ROS_VERSION==1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION==2">rclcpp</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION==2">ament_cmake</build_type>
  </export>

</package>
